Added script to download a file from the browser

--- a/Seleniumbasicprogram/SeleniumBasicProgram.csproj
+++ b/Seleniumbasicprogram/SeleniumBasicProgram.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionClass\Student.cs" />
+    <Compile Include="DownloadAndUpload\DownloadFile.cs" />
     <Compile Include="ExtentReports\FacebookReports.cs" />
     <Compile Include="Pictures\Bridgelabz.cs" />
     <Compile Include="Program.cs" />
