--- a/Seleniumbasicprogram/SeleniumBasicProgram.csproj
+++ b/Seleniumbasicprogram/SeleniumBasicProgram.csproj
@@ -43,6 +43,9 @@
     <Reference Include="ExtentReports, Version=4.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ExtentReports.4.0.3\lib\ExtentReports.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="MongoDB.Bson, Version=2.7.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MongoDB.Bson.2.7.2\lib\net45\MongoDB.Bson.dll</HintPath>
     </Reference>
@@ -91,7 +94,8 @@
   <ItemGroup>
     <Compile Include="ActionClass\Student.cs" />
     <Compile Include="DownloadAndUpload\DownloadFile.cs" />
-    <Compile Include="ExtentReports\FacebookReports.cs" />
+    <Compile Include="Reports\YoutubeReports.cs" />
+    <Compile Include="Reports\FacebookReports.cs" />
     <Compile Include="News\YcombinatorNews.cs" />
     <Compile Include="Pictures\Bridgelabz.cs" />
     <Compile Include="Program.cs" />
