--- a/Seleniumbasicprogram/SeleniumBasicProgram.csproj
+++ b/Seleniumbasicprogram/SeleniumBasicProgram.csproj
@@ -95,6 +95,7 @@
     <Compile Include="ActionClass\Student.cs" />
     <Compile Include="AlertsAndwindows\SimpleAlerts.cs" />
     <Compile Include="DownloadAndUpload\DownloadFile.cs" />
+    <Compile Include="News\NewsSite.cs" />
     <Compile Include="Reports\YoutubeReports.cs" />
     <Compile Include="Reports\FacebookReports.cs" />
     <Compile Include="News\YcombinatorNews.cs" />
