--- a/Seleniumbasicprogram/SeleniumBasicProgram.csproj
+++ b/Seleniumbasicprogram/SeleniumBasicProgram.csproj
@@ -96,6 +96,7 @@
     <Compile Include="AlertsAndwindows\SimpleAlerts.cs" />
     <Compile Include="DownloadAndUpload\DownloadFile.cs" />
     <Compile Include="News\NewsSite.cs" />
+    <Compile Include="Pictures\Automationsite.cs" />
     <Compile Include="Pictures\JquerySite.cs" />
     <Compile Include="Reports\YoutubeReports.cs" />
     <Compile Include="Reports\FacebookReports.cs" />
