Modified the class names in the code

--- a/Seleniumbasicprogram/SeleniumBasicProgram.csproj
+++ b/Seleniumbasicprogram/SeleniumBasicProgram.csproj
@@ -99,10 +99,10 @@
     <Compile Include="Browsers\Drivers.cs" />
     <Compile Include="DownloadAndUpload\DownloadFile.cs" />
     <Compile Include="News\NewsSiteBase.cs" />
-    <Compile Include="Pictures\Automationsite.cs" />
-    <Compile Include="Pictures\JquerySite.cs" />
-    <Compile Include="Reports\YoutubeReports.cs" />
-    <Compile Include="Reports\FacebookReports.cs" />
+    <Compile Include="Pictures\Automation.cs" />
+    <Compile Include="Pictures\Jquery.cs" />
+    <Compile Include="Reports\Youtube.cs" />
+    <Compile Include="Reports\FacebookTest.cs" />
     <Compile Include="News\YcombinatorNewsTests.cs" />
     <Compile Include="Pictures\Bridgelabz.cs" />
     <Compile Include="Program.cs" />
