Added code to run tests on BrowserStack

--- a/Seleniumbasicprogram/App.config
+++ b/Seleniumbasicprogram/App.config
@@ -1,15 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="log4net"
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+		<sectionGroup name="capabilities">
+			<section name="single" type="System.Configuration.AppSettingsSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+		</sectionGroup>
 
-		type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+		<sectionGroup name="environments">
+			<section name="chrome" type="System.Configuration.AppSettingsSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+		</sectionGroup>
 	</configSections>
+	
+	<appSettings>
+		<add key="user" value="rajeshkumarroulo1" />
+		<add key="key" value="shosxsASpUYxFiVVLjpH" />
+		<add key="server" value="hub-cloud.browserstack.com" />
+	</appSettings>
+	
 	<log4net>
-		<appender name="TestAppender"
-
-		type="log4net.Appender.RollingFileAppender" >
-			<file value="C:\Users\HP\source\repos\Seleniumbasicprogram\Seleniumbasicprogram\Reports\Youtube.txt" />
+		<appender name="TestAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="C:\Users\HP\source\repos\Seleniumbasicprogram\Seleniumbasicprogram\Reports\Youtube.log" />
 			<encoding value="utf-8" />
 			<appendToFile value="true" />
 			<rollingStyle value="Date" />
@@ -22,7 +32,67 @@
 			<appender-ref ref="TestAppender" />
 		</root>
 	</log4net>
+
+	<capabilities>
+		<single>
+			<add key="browserstack.debug" value="true" />
+		</single>
+	</capabilities>
+
+	<environments>
+		<chrome>
+			<add key="browser" value="chrome" />
+		</chrome>
+	</environments>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
+ 
+  <runtime>
+ 
+      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+ 
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+ 
+          </dependentAssembly>
+ 
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-3.1.8.0" newVersion="3.1.8.0" />
+ 
+          </dependentAssembly>
+ 
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-3.1.8.0" newVersion="3.1.8.0" />
+ 
+          </dependentAssembly>
+ 
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+ 
+          </dependentAssembly>
+ 
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+ 
+          </dependentAssembly>
+ 
+      </assemblyBinding>
+ 
+  </runtime>
 </configuration>
