--- a/Seleniumbasicprogram/packages.config
+++ b/Seleniumbasicprogram/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BrowserStackLocal" version="1.4.0" targetFramework="net472" />
   <package id="DnsClient" version="1.0.7" targetFramework="net472" />
   <package id="ExtentReports" version="4.0.3" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.8" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.8" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.8" targetFramework="net472" />
   <package id="MongoDB.Bson" version="2.7.2" targetFramework="net472" />
   <package id="MongoDB.Driver" version="2.7.2" targetFramework="net472" />
   <package id="MongoDB.Driver.Core" version="2.7.2" targetFramework="net472" />
@@ -15,6 +19,14 @@
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="85.0.4183.8700" targetFramework="net472" />
-  <package id="System.Buffers" version="4.3.0" targetFramework="net472" />
+  <package id="Sigil" version="5.0.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
 </packages>
